--- a/trunk/CadastroArena/WebContent/resources/css/bootstrap.css
+++ b/trunk/CadastroArena/WebContent/resources/css/bootstrap.css
@@ -19,6 +19,7 @@ html {
 }
 body {
   background-image: url('#{resource['img/background.jpg']}') !important;
+  background-repeat: no-repeat !important;
   margin: 0;
 }
 div.spacer {
